Remove overlapping filter label to fix scroll

--- a/css/screen.css
+++ b/css/screen.css
@@ -576,7 +576,6 @@ input::placeholder {
 */
 .o-page{
     background-image: var(--global-background-image);
-    overflow: hidden;
 }
 
 .o-page--fill{
@@ -690,6 +689,7 @@ input::placeholder {
     --c-app-sidebar-width: calc(192rem / 16);
     --c-app-height-header: calc(64rem / 16);
     --c-app-height-leftover: calc(100vh - var(--c-app-height-header));
+    position: relative;
 }
 
 .c-app__sidebar{
@@ -721,6 +721,8 @@ input::placeholder {
     display: grid;
     grid-template-rows: var(--c-app-height-header) auto;
     overflow: hidden;
+
+    position: relative;
 }
 
 .c-main__header{
@@ -728,6 +730,15 @@ input::placeholder {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.c-header{
+    /*
+    position: fixed;
+    width: 100%;
+    background-color: red;
+    */
 }
 
 .c-main__content{
@@ -804,7 +815,7 @@ input::placeholder {
     grid-row: 2;
     min-height: calc(100vh - var(--c-app-header-height));
     color: var(--c-sidebar__header-labelColor);
-    overflow-y: scroll;
+    overflow: auto;
 }
 
 
@@ -879,8 +890,12 @@ input::placeholder {
     position: relative;
     background-color: var(--c-label-background-hover) !important ;
     color: var(--c-label-labelColor-hover) !important;
+    height: auto;
 
+    /*
     width: calc(100% + var(--c-label-hover-extraWidth));
+    position: absolute;
+    */
 
     -webkit-box-shadow: var( --c-label-boxShadow-hover);
     -moz-box-shadow: var( --c-label-boxShadow-hover);
